// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`E2E Generates the correct event data for a Messenger Rooms Online event 1`] = `
{
  "categories": [],
  "description": "Description with json chars { woohoo hope this doesnt screw anything up ] [ ",
  "endTimestamp": null,
  "formattedDate": "Thursday, May 11, 2023 at 3:00 PM MDT",
  "hosts": [
    {
      "id": "pfbid02fJLXGyUDBatQc812diNVpgeFNjPjcUfpW29Q9QdnqoVuJ7fKfuJFsJbP1RK5C2Nol",
      "name": "Joe Smith",
      "photo": {
        "imageUri": "https://scontent-dfw5-3.xx.fbcdn.net/v/t1.30497-1/453178253_471506465671661_2781666950760530985_n.png?stp=cp0_dst-png_s74x74&_nc_cat=1&ccb=1-7&_nc_sid=136b72&_nc_ohc=Py8_nbWK5EEQ7kNvwFcf71b&_nc_oc=Adk2cIjJSQ-end9Qo6_brJYk_CDoUWhTakRUdlcRtyLxOgrkV1TInJKyRwkeQIzbRvcu6XOQ18qAJh6yCiOmIqQD&_nc_zt=24&_nc_ht=scontent-dfw5-3.xx&oh=00_AfHLHrUMLJ5mUhfS62dBK1T8-d40rFozpPL6GPxhrYRQfA&oe=68326A3A",
      },
      "type": "User",
      "url": "https://www.facebook.com/people/Joe-Smith/pfbid02fJLXGyUDBatQc812diNVpgeFNjPjcUfpW29Q9QdnqoVuJ7fKfuJFsJbP1RK5C2Nol/",
    },
  ],
  "id": "564972362099646",
  "isOnline": true,
  "location": null,
  "name": "msgner rooms live event with " in name",
  "onlineDetails": {
    "type": "MESSENGER_ROOM",
    "url": null,
  },
  "parentEvent": null,
  "photo": null,
  "siblingEvents": [],
  "startTimestamp": 1683838800,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/564972362099646/",
  "usersResponded": 2,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for a concert with multiple hosts & location info 1`] = `
{
  "categories": [],
  "description": "Ticket includes admission to Stampede Park

Sale Dates and Times:

Public Onsale : Fri, 24 Mar 2023 at 10:00 AM

Media Presale : Wed, 22 Mar 2023 at 10:00 AM

Stampede Insider Presale : Wed, 22 Mar 2023 at 10:00 AM

Saddledome Insider Presale : Wed, 22 Mar 2023 at 10:00 AM

Alberta Music Presale : Wed, 22 Mar 2023 at 10:00 AM

Better Business Bureau Presale : Wed, 22 Mar 2023 at 10:00 AM

Country Music Alberta Presale : Wed, 22 Mar 2023 at 10:00 AM

Artist Presale : Wed, 22 Mar 2023 at 10:00 AM

Venue Presale : Wed, 22 Mar 2023 at 10:00 AM

Calgary Flames Club Seats : Wed, 22 Mar 2023 at 10:00 AM

Calgary Flames Club Seat : Wed, 22 Mar 2023 at 12:00 PM

CSEC Insiders : Thu, 23 Mar 2023 at 10:00 AM

Aisle Seat Offer Presale : Wed, 22 Mar 2023 at 10:00 AM

Aisle Seat Offer Onsale : Fri, 24 Mar 2023 at 10:00 AM
",
  "endTimestamp": null,
  "formattedDate": "Friday, July 7, 2023 at 7:30 PM MDT",
  "hosts": [
    {
      "id": "100068207392255",
      "name": "Scotiabank Saddledome",
      "photo": {
        "imageUri": "https://scontent-dfw5-3.xx.fbcdn.net/v/t39.30808-1/281352750_2028415974017689_9212573442765953743_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=109&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=E-C0UqA1fYYQ7kNvwFxJCv0&_nc_oc=AdkP5Vw-05DJldHqN8WI3raHj1YwOJbYrIzdvG6vqjLOeq_TuTTKF1iO2yrSqycs5ZIGGxHH91_-usqeNTn_rqDM&_nc_zt=24&_nc_ht=scontent-dfw5-3.xx&_nc_gid=WWNzoS8S3i_B7BFznsxoCw&oh=00_AfF8PsLG70K5F-_UN0J6I7sXfD07jHgjThokfTyyWb6lig&oe=6810D60B",
      },
      "type": "User",
      "url": "https://www.facebook.com/scotiabanksaddledome",
    },
    {
      "id": "100064516969267",
      "name": "Calgary Stampede",
      "photo": {
        "imageUri": "https://scontent-dfw5-3.xx.fbcdn.net/v/t39.30808-1/352087888_1034380311273324_7910170983351471836_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=108&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=_wzTWB_mSVAQ7kNvwEOObNQ&_nc_oc=AdmYo14YVjPq3eVt94RHT2-bLd2qEpgU6C7adOPddwJGvoGtKfpre-ZTMazq5nYeK1785An5wfpuM9Y6SzSPthjX&_nc_zt=24&_nc_ht=scontent-dfw5-3.xx&_nc_gid=WWNzoS8S3i_B7BFznsxoCw&oh=00_AfFfxV3cGzGgGjfCPkiwaWk8-q1svNp9nqX1jykItKHMaw&oe=6810F2AB",
      },
      "type": "User",
      "url": "https://www.facebook.com/calgarystampede",
    },
    {
      "id": "100063699336240",
      "name": "Stampede Ent. Inc.",
      "photo": {
        "imageUri": "https://scontent-dfw5-1.xx.fbcdn.net/v/t39.30808-1/294695496_453263513473623_3023392462933132753_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=101&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=30kHQjkCaykQ7kNvwEIxdVz&_nc_oc=Adk5wqRBvBn6tD4XB0Tmyx-Yp3N5G3ZCFNn4m4NQo4Qv9HzgfpF37bP6JbXSSOipfvfjiggLDPelNDe_G3eUFIHd&_nc_zt=24&_nc_ht=scontent-dfw5-1.xx&_nc_gid=WWNzoS8S3i_B7BFznsxoCw&oh=00_AfGtksO5tJMRM7uQlVWLBkRCu98dK0k1FPw38EVo9mtKHg&oe=6810DAC2",
      },
      "type": "User",
      "url": "https://www.facebook.com/StampedeEntInc",
    },
    {
      "id": "100044535845092",
      "name": "Pitbull",
      "photo": {
        "imageUri": "https://scontent-dfw5-3.xx.fbcdn.net/v/t39.30808-1/439064200_1017561226405063_8213471074013536032_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=1&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=ms_Ex6AYzswQ7kNvwETSWct&_nc_oc=Adnm6qqCkHYoXpgLRNrWqxlMsbcx9_uAP5ox7cg1qR3d2Do7ICmecGeE1pvIZle_YXs2MT-Sdm4uDXf32Kk2aVQ6&_nc_zt=24&_nc_ht=scontent-dfw5-3.xx&_nc_gid=WWNzoS8S3i_B7BFznsxoCw&oh=00_AfFq8vPkF3QELTbEwcd6VwsBNRzG5h_CDIfww5Jk2Ecl4Q&oe=6810F203",
      },
      "type": "User",
      "url": "https://www.facebook.com/pitbull",
    },
  ],
  "id": "602005831971873",
  "isOnline": false,
  "location": {
    "address": "555 Saddledome Rise S.E.",
    "city": {
      "id": "111983945494775",
      "name": "Calgary, AB",
    },
    "coordinates": {
      "latitude": 51.037418735623,
      "longitude": -114.05197173357,
    },
    "countryCode": "CA",
    "description": "The Scotiabank Saddledome is Calgary's premier sports and entertainment venue.",
    "id": "426321674227135",
    "name": "Scotiabank Saddledome",
    "type": "PLACE",
    "url": "https://facebook.com/scotiabanksaddledome",
  },
  "name": "Pitbull with Special Guest Reve",
  "onlineDetails": null,
  "parentEvent": null,
  "photo": {
    "id": "10160954790708641",
    "imageUri": "https://scontent-dfw5-1.xx.fbcdn.net/v/t39.30808-6/336792249_949153626262984_8332769163095794984_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=75d36f&_nc_ohc=dJcsUuqw2cgQ7kNvwGiqk5a&_nc_oc=AdkNq7h1Syfsj2tjjtgJ_AaxP5b9TknDHn0kF35pcAJgef41Zbznf7cYe8CMzRqHbwCuO9gSAAo5NOj0zObIjWev&_nc_zt=23&_nc_ht=scontent-dfw5-1.xx&_nc_gid=l3y_fQceArAUcusg4thNXA&oh=00_AfGw3ePVxjLPi9OB6IgIObZGqBub22NQgS98VZ9BEsvSgQ&oe=6810ECED",
    "url": "https://www.facebook.com/photo/?fbid=10160954790708641&set=gm.602005851971871",
  },
  "siblingEvents": [],
  "startTimestamp": 1688779800,
  "ticketUrl": null,
  "timezone": "MDT",
  "url": "https://www.facebook.com/events/602005831971873/",
  "usersResponded": 1562,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for a event with an end date & multiple dates 1`] = `
{
  "categories": [
    {
      "label": "Religion",
      "uri": "https://www.facebook.com/events/discovery/?suggestion_token=%7B%22event_categories%22%3A%5B1763934757268181%5D%7D",
    },
  ],
  "description": "Christ is RISEN! Let's celebrate!

We might know the Easter story, but does it mean anything for us today? 

Come experience and celebrate what Easter offers, April 8/9 at FAC! 

Expect a 75-minute service filled with worship music, creative elements, and a message of hope from the Bible.

**Please note special service times: Saturday at 6:30 pm, Sunday at 9:15 & 11:15 am**

More info: https://www.faccalgary.com/easter",
  "endTimestamp": 1681065000,
  "formattedDate": "Sunday, April 9, 2023 at 11:15 AM – 12:30 PM MDT",
  "hosts": [
    {
      "id": "100064691376556",
      "name": "FAC Deerfoot",
      "photo": {
        "imageUri": "https://scontent-dfw5-1.xx.fbcdn.net/v/t39.30808-1/460987627_944177641081940_5270929113802053218_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=103&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=1Ztb1O6k6nkQ7kNvwGEESO5&_nc_oc=AdmIFENnCNKEj8JNj6ZFWKT4lw9u-JVSr3o4-4cTGOhu_XOFjsNa4EaTQ6IQgLFD4roAt79Ntk3YiHyXQREcKuUB&_nc_zt=24&_nc_ht=scontent-dfw5-1.xx&_nc_gid=cu6TAv-yfMKIRbtw4nbClQ&oh=00_AfHLcbMXCumZZVuSTRsrvl4ONfQeM_LmfTdNBPD_kK1ztA&oe=6810E564",
      },
      "type": "User",
      "url": "https://www.facebook.com/facdeerfoot",
    },
  ],
  "id": "1137956703546266",
  "isOnline": false,
  "location": {
    "address": "12345 40 Street SE",
    "city": {
      "id": "111983945494775",
      "name": "Calgary, AB",
    },
    "coordinates": {
      "latitude": 50.937853434334,
      "longitude": -113.97362557296,
    },
    "countryCode": "CA",
    "description": "Joining Jesus in the renewal of all things! 
Official Facebook Page for First Alliance Church",
    "id": "118309434891614",
    "name": "FAC Deerfoot",
    "type": "PLACE",
    "url": "https://facebook.com/facdeerfoot",
  },
  "name": "Easter - Deerfoot & Online Campuses",
  "onlineDetails": null,
  "parentEvent": {
    "id": "1137956700212933",
  },
  "photo": {
    "id": "595982989234742",
    "imageUri": "https://scontent-dfw5-1.xx.fbcdn.net/v/t39.30808-6/481055432_1056019033231133_4786716278309143615_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=75d36f&_nc_ohc=DSu1bCX6804Q7kNvwHTeX3Y&_nc_oc=AdmrobjuCmMIWJTASX0t1uErjoje3lPMDBp-NvP8rEEm1vFsDeWr722EqmBinSF9L-DUdnAMMA2fMNRsIUxKflbl&_nc_zt=23&_nc_ht=scontent-dfw5-1.xx&_nc_gid=UwvxRQ1jb8vnWhipnaZedw&oh=00_AfFiwxoLz3WO1HDdf4urWim2kX4Fcm2LBxY1St-dq4DnKg&oe=6810C154",
    "url": "https://www.facebook.com/photo/?fbid=595982989234742&set=gm.1137956736879596",
  },
  "siblingEvents": [
    {
      "endTimestamp": 1681065000,
      "id": "1137956703546266",
      "parentEvent": {
        "id": "1137956700212933",
      },
      "startTimestamp": 1681060500,
    },
    {
      "endTimestamp": 1681057800,
      "id": "1137956710212932",
      "parentEvent": {
        "id": "1137956700212933",
      },
      "startTimestamp": 1681053300,
    },
    {
      "endTimestamp": 1681004700,
      "id": "1137956706879599",
      "parentEvent": {
        "id": "1137956700212933",
      },
      "startTimestamp": 1681000200,
    },
  ],
  "startTimestamp": 1681060500,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/1137956700212933/?event_time_id=1137956703546266",
  "usersResponded": 20,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an event hosted by Eventbrite 1`] = `
{
  "categories": [
    {
      "label": "Wellness",
      "uri": "https://www.facebook.com/events/discovery/?suggestion_token=%7B%22event_categories%22%3A%5B1712245629067288%5D%7D",
    },
  ],
  "description": "Come bird  Beaverdam Flats from Refinery Park.  There will be open water and wetland areas to explore.

Come bird Refinery Park to Beaverdam Flats with Nature Calgary.   The pathway is along the river and can be slippery and icy at times. Please wear appropriate footwear.  This trip may not be suitable for all mobilities.  We welcome beginner and expert birders on our trips.
PLEASE NOTE WE WILL MEET AT PARKING LOT FOR REFINERY FLATS.
https://www.google.com/maps/place/Refinery+Park/@51.0051425,-114.019193,17z/data=!3m1!4b1!4m5!3m4!1s0x53717a7f5ddd6dd5:0x1b8647891750b9e2!8m2!3d51.0051425!4d-114.0170043
Binoculars are available to borrow for those who need them.",
  "endTimestamp": 1680543000,
  "formattedDate": "Monday, April 3, 2023 at 9:00 AM – 11:30 AM MDT",
  "hosts": [],
  "id": "252144510602906",
  "isOnline": false,
  "location": {
    "address": null,
    "city": null,
    "coordinates": {
      "latitude": 51.01257,
      "longitude": -114.00271,
    },
    "countryCode": "CA",
    "description": null,
    "id": "768722671166814",
    "name": "4687 Barlow Trail Southeast,Calgary,T2B 3T6,CA",
    "type": "TEXT",
    "url": null,
  },
  "name": "Nature Calgary Birding - Refinery Park to Beaverdam Flats",
  "onlineDetails": null,
  "parentEvent": null,
  "photo": {
    "id": "10167524860335261",
    "imageUri": "https://scontent-dfw5-2.xx.fbcdn.net/v/t39.30808-6/337885002_189168827241357_2737797815564835189_n.jpg?stp=dst-jpg_p960x960_tt6&_nc_cat=107&ccb=1-7&_nc_sid=75d36f&_nc_ohc=NIEFmv-Y0REQ7kNvwHdUmK6&_nc_oc=AdleySx-Tj24EVwryxCadOSW8uFYPHpaNILaqAoSqmOHeUqxUxnda89hF1kM2jWhDZgYewPZGOZVjEfeEW_ZI_NI&_nc_zt=23&_nc_ht=scontent-dfw5-2.xx&_nc_gid=_9I02Zh9I2Y8f-BAzhhMMQ&oh=00_AfGpgOFIS69KxENhV_CjfxdxwPp-sqihG-7Yd-c3IyqI2g&oe=6810ED31",
    "url": "https://www.facebook.com/photo/?fbid=10167524860335261&set=gm.252144523936238",
  },
  "siblingEvents": [],
  "startTimestamp": 1680534000,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/252144510602906/",
  "usersResponded": 0,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an event with a text address location 1`] = `
{
  "categories": [
    {
      "label": "Shopping",
      "uri": "https://www.facebook.com/events/discovery/?suggestion_token=%7B%22event_categories%22%3A%5B1759906074034918%5D%7D",
    },
  ],
  "description": "This free one day event is the start up to Calgary's vibrant festival season, and encourages citizens to shake off their winter blues and reintroduce themselves to the thriving creative community in our city. 

Each spring, thousands of attendees come out to enjoy the unique and pedestrian friendly 4th Street venue, offering an array of musical talent, artisan vendors, quality entertainment and some perfect people watching. 

At the Lilac Festival, there is an activity made for all ages. This could mean a jump in the bouncer for the kids, discovering a great new band, choosing a perfect summer patio or searching for a trendy fashion; there is no shortage of things happening.",
  "endTimestamp": 1685923200,
  "formattedDate": "Sunday, June 4, 2023 at 10:00 AM – 6:00 PM MDT",
  "hosts": [
    {
      "id": "100050510798749",
      "name": "Lilac Festival",
      "photo": {
        "imageUri": "https://scontent-dfw5-2.xx.fbcdn.net/v/t39.30808-1/491553306_1221674636192885_5739177654127096451_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=104&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=X8_8xvvzDckQ7kNvwEJ6Xcv&_nc_oc=AdnpEPJYzohQa-ttu7q5dgMfav_b-uKME_FsNrrMc5LYciODhPXOSAVLr1OJghxhape2mzpiIn-hkuy92R2k2ixq&_nc_zt=24&_nc_ht=scontent-dfw5-2.xx&_nc_gid=R_7bnPE8L_Rj-9Bsv1zZ1Q&oh=00_AfHVmThJmcT5SZ-Jb4tbVk-YP5xRoAoX92eQHTw1L4pF8A&oe=6810BD5C",
      },
      "type": "User",
      "url": "https://www.facebook.com/LilacFestival",
    },
  ],
  "id": "719931529922611",
  "isOnline": false,
  "location": {
    "address": null,
    "city": null,
    "coordinates": {
      "latitude": 51.035320819142,
      "longitude": -114.0715755823,
    },
    "countryCode": "CA",
    "description": null,
    "id": "749222630104757",
    "name": "Lilac Festival",
    "type": "TEXT",
    "url": null,
  },
  "name": "4th Street Lilac Festival",
  "onlineDetails": null,
  "parentEvent": null,
  "photo": {
    "id": "749222690104751",
    "imageUri": "https://scontent-dfw5-3.xx.fbcdn.net/v/t39.30808-6/472570967_1152279459799070_954455182245359149_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=75d36f&_nc_ohc=v0CMU4IShPMQ7kNvwEFOvqO&_nc_oc=AdlzQgT0-YBrTUpolQdJ_PL2vrfvXo0BwZb8te9_INEv2h2i0XsszqJ1-ZdKb8AoajQ2-anJm-8v11zjYqeL-tks&_nc_zt=23&_nc_ht=scontent-dfw5-3.xx&_nc_gid=5maalpEnWzsAJXpk9t2aig&oh=00_AfHiw4I1wKvs1i8F0unxv85_E2KpbtnwgplinlvwHvDQ-A&oe=6810CE94",
    "url": "https://www.facebook.com/photo/?fbid=749222690104751&set=gm.719931573255940",
  },
  "siblingEvents": [],
  "startTimestamp": 1685894400,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/719931529922611/",
  "usersResponded": 5939,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an event with a text location 1`] = `
{
  "categories": [],
  "description": "hbhjbjh",
  "endTimestamp": null,
  "formattedDate": "Tuesday, April 4, 2023 at 11:00 PM MDT",
  "hosts": [
    {
      "id": "pfbid02fJLXGyUDBatQc812diNVpgeFNjPjcUfpW29Q9QdnqoVuJ7fKfuJFsJbP1RK5C2Nol",
      "name": "Joe Smith",
      "photo": {
        "imageUri": "https://scontent-dfw5-3.xx.fbcdn.net/v/t1.30497-1/453178253_471506465671661_2781666950760530985_n.png?stp=cp0_dst-png_s74x74&_nc_cat=1&ccb=1-7&_nc_sid=136b72&_nc_ohc=Py8_nbWK5EEQ7kNvwFcf71b&_nc_oc=Adk2cIjJSQ-end9Qo6_brJYk_CDoUWhTakRUdlcRtyLxOgrkV1TInJKyRwkeQIzbRvcu6XOQ18qAJh6yCiOmIqQD&_nc_zt=24&_nc_ht=scontent-dfw5-3.xx&oh=00_AfHLHrUMLJ5mUhfS62dBK1T8-d40rFozpPL6GPxhrYRQfA&oe=68326A3A",
      },
      "type": "User",
      "url": "https://www.facebook.com/people/Joe-Smith/pfbid02fJLXGyUDBatQc812diNVpgeFNjPjcUfpW29Q9QdnqoVuJ7fKfuJFsJbP1RK5C2Nol/",
    },
  ],
  "id": "526262926343074",
  "isOnline": false,
  "location": {
    "address": null,
    "city": null,
    "coordinates": null,
    "countryCode": null,
    "description": null,
    "id": "1260045608271508",
    "name": "kbhbj",
    "type": "TEXT",
    "url": null,
  },
  "name": "Event to test",
  "onlineDetails": null,
  "parentEvent": null,
  "photo": null,
  "siblingEvents": [],
  "startTimestamp": 1680670800,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/526262926343074/",
  "usersResponded": 1,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an event with a ticket URL & city location 1`] = `
{
  "categories": [
    {
      "label": "Party",
      "uri": "https://www.facebook.com/events/discovery/?suggestion_token=%7B%22event_categories%22%3A%5B183019258855149%5D%7D",
    },
  ],
  "description": "The Dark Eighties in Calgary: 1977-2020s Edition

Tickets at https://thedarkeightiesspecialedition.eventbrite.ca
and on Ticket Tailor at https://www.tickettailor.com/events/12xuproductions/904667

$20 on the door

///we play///
EBM I GOTH I INDUSTRIAL I ITALO DISCO I NEW BEAT
NEW ROMANTICS I SYNTH POP I DARK WAVE I MINIMAL WAVE I POST PUNK I CULT 80S HITS I DEATHROCK + MORE!

Friday, May 5th 
The Junction
10pm-2am 

DJs Nebulae Complex + Chameleon

This time, we're not ONLY playing 80s but also dark tunes from after the 80s + a few late 70s punk/post punk tunes! 

FB: @thedarkeighties
Instagram: @12xuevents
Join our group!
https://www.facebook.com/groups/darkeighties
",
  "endTimestamp": 1683360000,
  "formattedDate": "Friday, May 5, 2023 at 10:00 PM – 2:00 AM MDT",
  "hosts": [
    {
      "id": "100070821304084",
      "name": "12XU",
      "photo": {
        "imageUri": "https://scontent-dfw5-2.xx.fbcdn.net/v/t39.30808-1/410227062_382882167415824_4051646999230968301_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=104&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=-XTKJP6Oml0Q7kNvwGcuOqs&_nc_oc=AdkIgY5t-g1dTsdkz0fisvQe4_JLXpsrf58KfeWwnaGcTO5IEgc36O1TEorLxGAnvqTKrLfuZ_vTYGqI17NLo5-B&_nc_zt=24&_nc_ht=scontent-dfw5-2.xx&_nc_gid=X0tCi-EQl6PF5ir91UV3mw&oh=00_AfHsRPdr9yc76DugUoXZ98V1n6Br9wMOL2q-8r0VlY_bgA&oe=6810D0E6",
      },
      "type": "User",
      "url": "https://www.facebook.com/12XUevents",
    },
    {
      "id": "100063904024919",
      "name": "The Dark Eighties",
      "photo": {
        "imageUri": "https://scontent-dfw5-3.xx.fbcdn.net/v/t39.30808-1/332078465_858485495251843_6558149897498817316_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=108&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=P_o4WNBlgv4Q7kNvwHROm6i&_nc_oc=AdnMinzl-nxqfPutCypmNrPr9QgoLL24umdtF6AF8Jk6R7B-2-YEpWS9OMrdhuomJZ2BNcfGO7E9p654kVFOLI4m&_nc_zt=24&_nc_ht=scontent-dfw5-3.xx&_nc_gid=X0tCi-EQl6PF5ir91UV3mw&oh=00_AfHT59MaKWKLdCZ4Rf1fZFp62KwgsxvbnSepTqq3z9qj1Q&oe=6810E067",
      },
      "type": "User",
      "url": null,
    },
  ],
  "id": "1376686273147180",
  "isOnline": false,
  "location": {
    "address": null,
    "city": null,
    "coordinates": {
      "latitude": 51.05,
      "longitude": -114.06666666667,
    },
    "countryCode": "CA",
    "description": null,
    "id": "992250685521992",
    "name": "Calgary, Alberta, Canada",
    "type": "TEXT",
    "url": null,
  },
  "name": "The Dark Eighties: 1977-2023 Edition",
  "onlineDetails": null,
  "parentEvent": null,
  "photo": {
    "id": "621131586693637",
    "imageUri": "https://scontent-dfw5-2.xx.fbcdn.net/v/t39.30808-6/483866251_1107783254695132_4478007887358984133_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=75d36f&_nc_ohc=91d8f06rU88Q7kNvwE05QX2&_nc_oc=AdkqDonL2aXN0fN2Xnkt44HRKRlTOg-8MdL0Ytp02bzuZtvdjDJ_NECOp24B1una-DEwGzYh2JBoZUQZ_Ty5eFZQ&_nc_zt=23&_nc_ht=scontent-dfw5-2.xx&_nc_gid=CkD8RCRJZP89rEoI9ZSDdg&oh=00_AfFHVXHx_qfth3mIns-d9MCNQGWoum2JlPoL4NGaVICYbw&oe=6810BD28",
    "url": "https://www.facebook.com/photo/?fbid=621131586693637&set=gm.1376686326480508",
  },
  "siblingEvents": [],
  "startTimestamp": 1683345600,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/1376686273147180/",
  "usersResponded": 423,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an event with a video cover 1`] = `
{
  "categories": [
    {
      "label": "Causes",
      "uri": "https://www.facebook.com/events/discovery/?suggestion_token=%7B%22event_categories%22%3A%5B1284277608291920%5D%7D",
    },
  ],
  "description": "💡 Kaip atrodys ateities universitetas? Kokius uždavinius kelsime ateities aukštajam mokslui? Kaip ir kokias asmenybes ugdysime? Kaip pritaikysime švietimo sistemą prie laukiančių technologijų pokyčių? Susitikime padiskutuoti su profesoriumi, Vilniaus universiteto rektoriumi, Valstybės pažangos tarybos nariu dr. Rimvydu Petrausku apie Lietuvos ateities švietimą ir pasidalinti, kokią viziją 2050 metams turime mes.  

Pokalbį moderuos VšĮ „Šiauliai plius“ direktorė Giedrė Brazlauskaitė.

📍 Renginys vyks Šiaulių apskrities Povilo Višinskio viešosios bibliotekos Konferencijų salėje, Aušros alėja 62, Šiauliai
  
❗️Renginys atviras visiems, tačiau prašome užsiregistruoti https://forms.office.com/e/yQVDMreN2C 

Daugiau informacijos apie „Lietuva 2050” – www.Lietuva2050.lt

Ateitį kurkime šiandien!   
",
  "endTimestamp": 1684333800,
  "formattedDate": "Wednesday, May 17, 2023 at 4:00 PM – 5:30 PM EEST",
  "hosts": [
    {
      "id": "100067786593384",
      "name": "Lietuva 2050",
      "photo": {
        "imageUri": "https://scontent-dfw5-1.xx.fbcdn.net/v/t39.30808-1/353748572_586062753663273_3803358940549831479_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=111&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=d5lKAaXHi8cQ7kNvwGQe1Qj&_nc_oc=Adn6Gfcy9zxb3DTkQRu1nYrX2PP4ccNCj2mId7vvxGajkx8Fyl1dBNN21rH5r4UROdWJD784HYiWoQnyHHWEDZdf&_nc_zt=24&_nc_ht=scontent-dfw5-1.xx&_nc_gid=ty77TmOFcKYTWtBNkvCltA&oh=00_AfH-a3ZvtoBv6IE0ZuRCd5knPt7v3XJ01IKpNqumcoGwTg&oe=6810E451",
      },
      "type": "User",
      "url": "https://www.facebook.com/Lietuva2050",
    },
    {
      "id": "100039182298687",
      "name": "VU Šiaulių akademija",
      "photo": {
        "imageUri": "https://scontent-dfw5-1.xx.fbcdn.net/v/t39.30808-1/274600858_487344632966234_2522454326585058130_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=105&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=JT7Ik6O_avsQ7kNvwFuUMFK&_nc_oc=AdnJ-D4cNyYgYlZcFbN5xyrW-uGPrXWgi8Sc79yYoKz9i8X1D9sTcmc1admok1Yb8BA9TnoCzn-i4he8BkhEUNtg&_nc_zt=24&_nc_ht=scontent-dfw5-1.xx&_nc_gid=ty77TmOFcKYTWtBNkvCltA&oh=00_AfFvXoVtw_r-foZjhUa2SoDPq7PQ1X-juBQW-HDD-pFOcw&oe=6810CF7C",
      },
      "type": "User",
      "url": "https://www.facebook.com/siauliu.akademija",
    },
    {
      "id": "100064306435250",
      "name": "Vilniaus universitetas / Vilnius University",
      "photo": {
        "imageUri": "https://scontent-dfw5-2.xx.fbcdn.net/v/t39.30808-1/274532730_5225887714128805_1147028878997655106_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=104&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=eR73TqsOOowQ7kNvwG1EjPf&_nc_oc=AdlPTVzdcFR06yYo7-2cbaqYCBcmU0HNMtDeACZ5zTxEnCETcIqawrW8_ofzt4TOVKZ7ccrBO7K_KzPq-KzFytCP&_nc_zt=24&_nc_ht=scontent-dfw5-2.xx&_nc_gid=ty77TmOFcKYTWtBNkvCltA&oh=00_AfEYIWmblKlGXIuiqiHI7AOGcVKKcHHf7HX7giOiX0lpKw&oe=6810EDF2",
      },
      "type": "User",
      "url": "https://www.facebook.com/VilniusUniversity",
    },
    {
      "id": "100064644461523",
      "name": "Šiaulių apskrities Povilo Višinskio viešoji biblioteka",
      "photo": {
        "imageUri": "https://scontent-dfw5-2.xx.fbcdn.net/v/t39.30808-1/473965764_1047560367408769_1188670290210731717_n.jpg?stp=c293.0.1414.1414a_cp0_dst-jpg_s74x74_tt6&_nc_cat=100&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=1rIHPldQdCoQ7kNvwFG1-cC&_nc_oc=Admh2K7dHd_MFqkpyPUx4uJkeDyR5-vIiwxP6d5B1erup_7KJ3JRh-P_X_80aBPBgkSIUIzacbR34zRONWkWvtnY&_nc_zt=24&_nc_ht=scontent-dfw5-2.xx&_nc_gid=ty77TmOFcKYTWtBNkvCltA&oh=00_AfE44_FVqrsdVAi-kll2EmgTM4cW5yin_64w4me3dE-3eg&oe=6810BC3A",
      },
      "type": "User",
      "url": "https://www.facebook.com/SAVB.info",
    },
  ],
  "id": "242861135088721",
  "isOnline": true,
  "location": null,
  "name": "Lietuva 2050: kokį vaidmenį atlieka švietimas, užtikrindamas valstybės ateitį?",
  "onlineDetails": {
    "type": "FB_LIVE",
    "url": null,
  },
  "parentEvent": null,
  "photo": null,
  "siblingEvents": [],
  "startTimestamp": 1684328400,
  "ticketUrl": null,
  "timezone": "UTC+03",
  "url": "https://www.facebook.com/events/242861135088721/",
  "usersResponded": 123,
  "video": {
    "id": "2194658774256880",
    "thumbnailUri": "https://scontent-dfw5-2.xx.fbcdn.net/v/t15.5256-10/343286097_763205485254382_1688962917143675368_n.jpg?stp=dst-jpg_s960x960_tt6&_nc_cat=107&ccb=1-7&_nc_sid=282d23&_nc_ohc=FmjpqoqRPBsQ7kNvwFTH3E6&_nc_oc=AdnEQGY20hKE_Now8xIQ3tskYHI86e5_dDA8WEB8eJTVN0uoPXBiUTmhjHonnIxjg-FRqvwniZTndv3_70PARUu-&_nc_zt=23&_nc_ht=scontent-dfw5-2.xx&_nc_gid=udtzjIOWZaNtTNf0MxDzlw&oh=00_AfESBnD35DsPcdn3Wfcr-O6IAYOk8-nCzBPFL87N0xlmfg&oe=6810C26B",
    "url": "https://www.facebook.com/Lietuva2050/videos/2194658774256880/",
  },
}
`;

exports[`E2E Generates the correct event data for an event with multiple hosts, a place location & tickets 1`] = `
{
  "categories": [
    {
      "label": "Sports",
      "uri": "https://www.facebook.com/events/discovery/?suggestion_token=%7B%22event_categories%22%3A%5B607999416057365%5D%7D",
    },
  ],
  "description": "The #AEW Summer Canadian Tour concludes with #AEWCollision LIVE in Calgary, AB on Saturday, July 15 as part of Canada’s iconic Calgary Stampede at the Saddledome!

Tickets are ON SALE NOW!",
  "endTimestamp": null,
  "formattedDate": "Saturday, July 15, 2023 at 4:00 PM EDT",
  "hosts": [
    {
      "id": "100064709654009",
      "name": "All Elite Wrestling",
      "photo": {
        "imageUri": "https://scontent-dfw5-3.xx.fbcdn.net/v/t39.30808-1/448627833_865600602273587_4050110030248245393_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=1&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=9G2cauTJu-kQ7kNvwGRJjmE&_nc_oc=AdkjOKFf8VnAjG2ahPg4suLI0-UA5dtSbkzOrOo93-NKTGACXy99mxhJpCGDZKU_VJ0eCi9hjABpcxKMZR1yzvAY&_nc_zt=24&_nc_ht=scontent-dfw5-3.xx&_nc_gid=TjtEqw2cuCIf_-2XNtnJuQ&oh=00_AfEUfYVLnPvjpAChxchw4O4O49TTCY85OH0NoDDG0Fyasw&oe=6810C2A9",
      },
      "type": "User",
      "url": "https://www.facebook.com/AEW",
    },
    {
      "id": "100063699336240",
      "name": "Stampede Ent. Inc.",
      "photo": {
        "imageUri": "https://scontent-dfw5-1.xx.fbcdn.net/v/t39.30808-1/294695496_453263513473623_3023392462933132753_n.jpg?stp=cp0_dst-jpg_s74x74_tt6&_nc_cat=101&ccb=1-7&_nc_sid=2d3e12&_nc_ohc=30kHQjkCaykQ7kNvwEIxdVz&_nc_oc=Adk5wqRBvBn6tD4XB0Tmyx-Yp3N5G3ZCFNn4m4NQo4Qv9HzgfpF37bP6JbXSSOipfvfjiggLDPelNDe_G3eUFIHd&_nc_zt=24&_nc_ht=scontent-dfw5-1.xx&_nc_gid=TjtEqw2cuCIf_-2XNtnJuQ&oh=00_AfGki7rvdY_33RExgRV3-W8e2mFADi1v3WxoyG0dKhl3mQ&oe=6810DAC2",
      },
      "type": "User",
      "url": "https://www.facebook.com/StampedeEntInc",
    },
  ],
  "id": "941510027277450",
  "isOnline": false,
  "location": {
    "address": "1410 Stampede Trail SE",
    "city": {
      "id": "111983945494775",
      "name": "Calgary, AB",
    },
    "coordinates": {
      "latitude": 51.035629728479,
      "longitude": -114.05452196423,
    },
    "countryCode": "CA",
    "description": "The Calgary Stampede is a not-for-profit community organization that preserves and promotes our western heritage, cultures and community spirit.",
    "id": "104371842930883",
    "name": "Calgary Stampede",
    "type": "PLACE",
    "url": "https://facebook.com/calgarystampede",
  },
  "name": "All Elite Wrestling (AEW) Collision Calgary, Alberta Debut!",
  "onlineDetails": null,
  "parentEvent": null,
  "photo": {
    "id": "1273089803342464",
    "imageUri": "https://scontent-dfw5-3.xx.fbcdn.net/v/t39.30808-6/473081369_1630277110957063_1481524804345515679_n.jpg?_nc_cat=109&ccb=1-7&_nc_sid=75d36f&_nc_ohc=PIZ549V1N18Q7kNvwELHf8P&_nc_oc=AdmOu-amJxn4traKNxmFjIauQ4dZOq2ldUUPx4Fsg_OpLMLqOSjxt3uYzyGRw3lnaY-3xc1A9hQiZcbnN0CuNDj7&_nc_zt=23&_nc_ht=scontent-dfw5-3.xx&_nc_gid=sctIIJkNmvp4sHDqU7ybVg&oh=00_AfEJu75re4YIqHM39iXgAxu8Q62iA_Y4UgZP67Ni9vdBpw&oe=6810DB36",
    "url": "https://www.facebook.com/photo/?fbid=1273089803342464&set=gm.977705193657933",
  },
  "siblingEvents": [],
  "startTimestamp": 1689451200,
  "ticketUrl": null,
  "timezone": "EDT",
  "url": "https://www.facebook.com/events/941510027277450/",
  "usersResponded": 598,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for an online event with a third-party URL 1`] = `
{
  "categories": [],
  "description": "",
  "endTimestamp": null,
  "formattedDate": "Friday, June 16, 2023 at 4:00 PM MDT",
  "hosts": [
    {
      "id": "pfbid02fJLXGyUDBatQc812diNVpgeFNjPjcUfpW29Q9QdnqoVuJ7fKfuJFsJbP1RK5C2Nol",
      "name": "Joe Smith",
      "photo": {
        "imageUri": "https://scontent-dfw5-3.xx.fbcdn.net/v/t1.30497-1/453178253_471506465671661_2781666950760530985_n.png?stp=cp0_dst-png_s74x74&_nc_cat=1&ccb=1-7&_nc_sid=136b72&_nc_ohc=Py8_nbWK5EEQ7kNvwFcf71b&_nc_oc=Adk2cIjJSQ-end9Qo6_brJYk_CDoUWhTakRUdlcRtyLxOgrkV1TInJKyRwkeQIzbRvcu6XOQ18qAJh6yCiOmIqQD&_nc_zt=24&_nc_ht=scontent-dfw5-3.xx&oh=00_AfHLHrUMLJ5mUhfS62dBK1T8-d40rFozpPL6GPxhrYRQfA&oe=68326A3A",
      },
      "type": "User",
      "url": "https://www.facebook.com/people/Joe-Smith/pfbid02fJLXGyUDBatQc812diNVpgeFNjPjcUfpW29Q9QdnqoVuJ7fKfuJFsJbP1RK5C2Nol/",
    },
  ],
  "id": "760928342374546",
  "isOnline": true,
  "location": null,
  "name": "Third party URL event",
  "onlineDetails": {
    "type": "THIRD_PARTY",
    "url": "https://www.example.com/hey",
  },
  "parentEvent": null,
  "photo": null,
  "siblingEvents": [],
  "startTimestamp": 1686952800,
  "ticketUrl": null,
  "timezone": "UTC-06",
  "url": "https://www.facebook.com/events/760928342374546/",
  "usersResponded": 1,
  "video": null,
}
`;

exports[`E2E Generates the correct event data for events from group 1`] = `[]`;

exports[`E2E Generates the correct event data for events from group page 1`] = `[]`;

exports[`E2E Generates the correct event data for past events from page 1`] = `
[
  {
    "date": "Tue, Apr 15",
    "id": "1196106715549172",
    "isCanceled": false,
    "isPast": true,
    "name": "Bachata & Salsa: FREE Open Class + Party",
    "url": "https://www.facebook.com/events/1196106715549172/",
  },
  {
    "date": "Thu, Apr 3",
    "id": "1148340996977550",
    "isCanceled": false,
    "isPast": true,
    "name": "Bachata & Salsa: FREE Open Class + Party",
    "url": "https://www.facebook.com/events/1148340996977550/",
  },
  {
    "date": "Tue, Apr 1",
    "id": "1372327683701218",
    "isCanceled": false,
    "isPast": true,
    "name": "Bachata & Salsa: FREE Open Class + Party",
    "url": "https://www.facebook.com/events/1372327683701218/",
  },
  {
    "date": "Tue, Mar 25",
    "id": "1369200957569262",
    "isCanceled": false,
    "isPast": true,
    "name": "Bachata & Salsa: FREE Open Class + Party",
    "url": "https://www.facebook.com/events/1369200957569262/",
  },
  {
    "date": "Tue, Mar 18",
    "id": "998491512228665",
    "isCanceled": false,
    "isPast": true,
    "name": "Bachata & Salsa: FREE Open Class + Party",
    "url": "https://www.facebook.com/events/998491512228665/",
  },
  {
    "date": "Tue, Mar 11",
    "id": "1739191463661568",
    "isCanceled": false,
    "isPast": true,
    "name": "Bachata & Salsa: FREE Open Class + Party",
    "url": "https://www.facebook.com/events/1739191463661568/",
  },
  {
    "date": "Tue, Mar 4",
    "id": "567208933022674",
    "isCanceled": false,
    "isPast": true,
    "name": "Bachata & Salsa - FREE Open Class + Party",
    "url": "https://www.facebook.com/events/567208933022674/",
  },
  {
    "date": "Tue, Feb 25",
    "id": "1298022051410475",
    "isCanceled": false,
    "isPast": true,
    "name": "BACHATA & SALSA FIESTA - Free Entry",
    "url": "https://www.facebook.com/events/1298022051410475/",
  },
]
`;

exports[`E2E Generates the correct event data for upcoming events from page 1`] = `
[
  {
    "date": "Tue, Apr 15",
    "id": "1196106715549172",
    "isCanceled": false,
    "isPast": true,
    "name": "Bachata & Salsa: FREE Open Class + Party",
    "url": "https://www.facebook.com/events/1196106715549172/",
  },
  {
    "date": "Thu, Apr 3",
    "id": "1148340996977550",
    "isCanceled": false,
    "isPast": true,
    "name": "Bachata & Salsa: FREE Open Class + Party",
    "url": "https://www.facebook.com/events/1148340996977550/",
  },
  {
    "date": "Tue, Apr 1",
    "id": "1372327683701218",
    "isCanceled": false,
    "isPast": true,
    "name": "Bachata & Salsa: FREE Open Class + Party",
    "url": "https://www.facebook.com/events/1372327683701218/",
  },
  {
    "date": "Tue, Mar 25",
    "id": "1369200957569262",
    "isCanceled": false,
    "isPast": true,
    "name": "Bachata & Salsa: FREE Open Class + Party",
    "url": "https://www.facebook.com/events/1369200957569262/",
  },
  {
    "date": "Tue, Mar 18",
    "id": "998491512228665",
    "isCanceled": false,
    "isPast": true,
    "name": "Bachata & Salsa: FREE Open Class + Party",
    "url": "https://www.facebook.com/events/998491512228665/",
  },
  {
    "date": "Tue, Mar 11",
    "id": "1739191463661568",
    "isCanceled": false,
    "isPast": true,
    "name": "Bachata & Salsa: FREE Open Class + Party",
    "url": "https://www.facebook.com/events/1739191463661568/",
  },
  {
    "date": "Tue, Mar 4",
    "id": "567208933022674",
    "isCanceled": false,
    "isPast": true,
    "name": "Bachata & Salsa - FREE Open Class + Party",
    "url": "https://www.facebook.com/events/567208933022674/",
  },
  {
    "date": "Tue, Feb 25",
    "id": "1298022051410475",
    "isCanceled": false,
    "isPast": true,
    "name": "BACHATA & SALSA FIESTA - Free Entry",
    "url": "https://www.facebook.com/events/1298022051410475/",
  },
]
`;

exports[`E2E Generates the correct event data for upcoming events from page 2`] = `
[
  {
    "date": "Thu, Apr 3 at 8:00 PM CEST",
    "id": "1148340996977550",
    "isCanceled": false,
    "isPast": false,
    "name": "Bachata & Salsa: FREE Open Class + Party",
    "url": "https://www.facebook.com/events/1148340996977550/",
  },
]
`;
